src/test/deca/context/valid/new_class.deca
// Description:
//    Test d'un new dans une classe
//
// Résultats:
//    ok
//
// Historique:
//    créé le 21/01/2017

class A {
    int x;
}
class B {
    int y;
    void setY() {
    	 A a = new A();
	 y = a.x;
    }
}