src/test/deca/context/invalid/field_init_null.deca
// Description:
//    Test d'une déclaration d'un champ initialisé à null
//
// Résultats:
//    Ligne 12 : Affectation à un objet de type int une valeur de type null impossible (règle 3.28)
//
// Historique:
//    créé le 21/01/2017


class A {
  int x = null;
}
